--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
 language: java
 jdk: 
   - oraclejdk8
-  - oraclejdk9
 
 dist: xenial
 sudo: required
+
+before_install:
+  - sudo apt-get update
+  - javac -version
+
+install:
+  - echo "###installing###"
